...
}

val items = listOf(
    BottomNavItem("Rendelések", Icons.Default.Done),
    BottomNavItem("Ügyfelek", Icons.Default.Person),
    BottomNavItem("Termékek", Icons.Default.ShoppingCart),
    BottomNavItem("Beállítások", Icons.Default.Settings)
)

@Composable
fun BottomNavBar(
    selectedItem: BottomNavItem,
    navigateTo: (String) -> Unit
...
                Button(
                    onClick = {
                        onDismiss()
                        showDialog.value = false
                    }
                ) {
                    Text("Nem")
                }
            }
        )
    }
}

...
