...
                        color = MaterialTheme.colors.secondaryVariant
                    )
                }

                if (showLoginFrom.value) {
                    Text(
                        "Elfelejtett jelszó",
                        modifier = Modifier
                            .clickable {
                                passwordReset.value = true
                            }
                            .padding(start = 5.dp),
                        fontWeight = FontWeight.Bold,
...
